[package]
name = "s3find"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.3"
aws-sdk-s3 = "1.39.0"
clap = { version = "4.5.8", features = ["derive"] }
regex = "1.10.5"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
